<resources>
    <string name="app_name">team14</string>
    <string name="title_activity_customer_registration">CustomerRegistration</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="customer_registration_header">Εγγραφή</string>
    <string name="username_label">Ονοματεπώνυμο</string>
    <string name="email_label">Email</string>
    <string name="email_field_hint">πχ test@example.com</string>
    <string name="phone_label">Τηλέφωνο</string>
    <string name="phone_field_hint">πχ 2101234567</string>
    <string name="address_label">Διεύθυνση</string>
    <string name="tk_label">Ταχυδρομικός Κωδικός</string>
    <string name="password1_label">Κωδικός</string>
    <string name="password1_field_hint">τουλάχιστον 8 χαρακτήρες σε μέγεθος</string>
    <string name="password2_label">Επαλήθευση Κωδικού</string>
    <string name="customer_registration_button_text">ΕΓΓΡΑΦΗ</string>
    <string name="password_length_error">Ο κωδικός είναι πολύ μικρός!</string>
    <string name="passwords_do_not_match_error">Οι κωδικοί δεν ταιριάζουν!</string>
    <string name="wrong_values_given_error">Έχουν δωθεί λάθος τιμές!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_label">Έως</string>
    <string name="from_label">Από</string>
    <string name="add_date_btn">Προσθηκη Ημερομηνιας</string>
    <string name="job_name_label">Όνομα Δουλειάς</string>
    <string name="add_job_btn">Προσθηκη Δουλειας</string>
    <string name="job_price_label">Τιμή Δουλειάς</string>
    <string name="electrician">Ηλεκτρολόγος</string>
    <string name="plumber">Υδραυλικός</string>
    <string name="gardener">Κηπουρός</string>
    <string name="locksmith">Κλειδαράς</string>
    <string name="plakatzis">Πλακατζής</string>
    <string name="plasterer">Σοβατζής</string>
    <string name="engineer">Μηχανικός</string>
    <string name="builder">Χτίστης</string>
    <string name="carpenter">Ξυλουργός</string>
    <string name="add_address_btn">Προσθηκη Περιοχης</string>
    <string name="choose_addresses_label">Επιλέξτε Διεύθυνσεις</string>
    <string name="choose_dates_label">Επιλέξτε Ημερομηνίες</string>
    <string name="choose_jobs_label">Επιλέξτε Δουλειές</string>
    <string name="choose_categories_label">Επιλέξτε Ειδικότητες</string>
    <string name="rest_technician_data_label">Εισάγετε τα υπόλοιπα στοιχεία</string>
    <string name="no_dates_given_error">Δώστε τουλάχιστον μία ημερομηνία</string>
    <string name="no_specialty_chosen_error">Επιλέξτε τουλάχιστον μία ειδικότητα</string>
    <string name="no_address_given_error">Δώστε τουλάχιστον μία διεύθυνση</string>
    <string name="communication_value_hint">email ή κινητό</string>
    <string name="phone_hint">τηλέφωνο</string>
    <string name="communication_type_header">Επιλέξτε τρόπο επικοινωνίας</string>
    <string name="no_job_given_error">Δώστε τουλάχιστον μία δουλειά</string>
    <string name="successful_technician_creation">Επιτυχής δημιουργία!</string>
    <string name="title">Team 14 App</string>
    <string name="login_btn">ΣΥΝΔΕΣΗ</string>
    <string name="register_customer_btn">ΕΓΓΡΑΦΗ ΧΡΗΣΤΗ</string>
    <string name="register_technician_btn">ΕΓΓΡΑΦΗ ΤΕΧΝΙΚΟΥ</string>
    <string name="login_label">ΣΥΝΔΕΣΗ</string>
    <string name="login_error">Λάθος όνομα χρήστη ή κωδικός</string>
    <string name="search_btn">Αναζητηση</string>
    <string name="search_box_hint">Όνομα τεχνικού</string>
    <string name="back_btn">ΠΙΣΩ</string>
    <string name="specialties_section_title">Ειδικότητες</string>
    <string name="choose_date_title">Επιλέξτε ημερομηνία</string>
    <string name="show_info_btn">ΚΡΑΤΗΣΗ</string>
    <string name="no_job_chosen_error">Επιλέξτε τουλάχιστον μία δουλειά</string>
    <string name="no_chosen_date_error">Επιλέξτε κάποια ημερομηνία</string>
    <string name="appointment_created">Κλείσατε νέο ραντεβού!</string>
    <string name="pending_appointments_label">Νέα ραντεβού</string>
    <string name="confirm_btn">ΕΠΙΒΕΒΑΙΩΣΗ</string>
    <string name="dismiss_btn">ΑΠΟΡΡΙΨΗ</string>
    <string name="uncompleted_appointments_label">Μη ολοκληρωμένα ραντεβού</string>
    <string name="complete_appointment_btn">ΟΛΟΚΛΗΡΩΣΗ</string>
    <string name="appointment_completed">Το ραντεβού ολοκληρώθηκε</string>
    <string name="for_payment_appointments_label">Ραντεβού προς πληρωμή</string>
    <string name="amount_label">Ποσό</string>
    <string name="payment_jobs_label">Δουλειές αναλυτικά</string>
    <string name="payment_btn">ΠΛΗΡΩΜΗ</string>
    <string name="payment_job_price">%1$d €</string>
    <string name="add_appointment_btn">ΝΕΟ ΡΑΝΤΕΒΟΥ</string>
    <string name="evaluation_btn">ΑΞΙΟΛΟΓΗΣΗ</string>
    <string name="evaluation_label">Αξιολόγηση ραντεβού</string>
    <string name="appointment_evaluation_label">Αξιολογήστε τον τεχνικό</string>
    <string name="appointment_evaluation_hint">0: Κακές υπηρεσίες   10: Άψογες υπηρεσίες</string>
</resources>